<resources>

    <string-array name="gender_arrays">
        <item>Kobieta</item>
        <item>Mężczyzna</item>
    </string-array>

    <string-array name="typeso_array">
        <item>Dystans</item>
        <item>Kalorie</item>
    </string-array>

    <string-array name="objectives_array_distance">
        <item>3km</item>
        <item>5km</item>
        <item>10km</item>
        <item>21km</item>
        <item>42km</item>
        <item>60km</item>
    </string-array>

    <string-array name="objectives_array_calories">
        <item>100kcal</item>
        <item>400kcal</item>
        <item>600kcal</item>
        <item>800kcal</item>
        <item>1000kcal</item>
        <item>1200kcal</item>
        <item>1500kcal</item>
        <item>2000kcal</item>
        <item>2500kcal</item>
        <item>3000kcal</item>
        <item>3500kcal</item>
        <item>4000kcal</item>
        <item>4500kcal</item>
    </string-array>

    <string name="app_name">Ready4RUN</string>

    <string name="gender_prompt">Wybierz płeć</string>

    <string name="title_activity_welcome">welcome</string>
    <string name="registerHere">Nie masz konta? Zarejestruj się.</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="login">Zaloguj się</string>
    <string name="password">Hasło</string>

    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="register">Zarejestruj</string>
    <string name="email">Email</string>
    <string name="age">Wiek</string>
    <string name="passwordConfirm">Powtórz hasło</string>
    <string name="haveAccount">Masz już konto? Zaloguj się.</string>
    <string name="chooseGender">Wybierz płeć</string>
    <string name="male">Mężczyzna</string>
    <string name="female">Kobieta</string>

    <string name="showFriendsTrainings">PODEJRZYJ TRENINGI SWOICH ZNAJOMYCH</string>
    <string name="addPost">OPUBLIKUJ POST</string>

    <string name="addTraining">DODAWANIE TRENINGU</string>
    <string name="updateWeight">ZAKTUALIZUJ SWOJĄ WAGĘ</string>
    <string name="estimatedDistance">Szacowana odległość (km)</string>
    <string name="hours">godziny (h)</string>
    <string name="mins">minuty (mm)</string>
    <string name="personalNotes">Osobiste notatki (niewymagane)*</string>
    <string name="saveTraining">ZAPISZ TRENING</string>

    <string name="aboutMe">O MNIE</string>
    <string name="editProfile">EDYTUJ PROFIL</string>

    <string name="chooseObjective">WYBIERZ SWÓJ CEL</string>
    <string name="saveObjective">ZAPISZ SWÓJ CEL</string>
    <string name="showObjectives">Podejrzyj swoje cele</string>
    <string name="type">RODZAJ</string>
    <string name="objective">CEL</string>
    <string name="addObjective">ZAPISZ SWÓJ CEL</string>

    <string name="trainingHistory">HISTORIA TRENINGÓW</string>

    <string name="myFriends">MOI ZNAJOMI</string>
    <string name="searchFriends">SZUKAJ ZNAJOMYCH</string>

    <string name="addFriend">DODAJ DO ZNAJOMYCH</string>

    <string name="friendsTrainingHistory">HISTORIA TWOICH TRENINGÓW ORAZ ZNAJOMYCH</string>

    <string name="sendMessage">WYŚLIJ WIADOMOŚĆ</string>
    <string name="deleteFriend">USUŃ ZE ZNAJOMYCH</string>

    <string name="postComment">OPUBLIKUJ KOMENTARZ</string>

    <string name="sendMessageHint">Napisz wiadomość...</string>

    <string name="editPhoto">EDYTUJ ZDJĘCIE</string>
    <string name="editUsername">Zmień nazwę użytkownika</string>
    <string name="editEmail">Zmień swój adres email</string>
    <string name="editAge">Zmień swój wiek</string>
    <string name="editPassword">Zmień hasło</string>
    <string name="editGender">Płeć</string>
    <string name="editWeight">Zmień swoją wagę</string>
    <string name="editHeight">Zmień swój wzrost</string>
    <string name="editCity">Zmień swoją miejscowość</string>
    <string name="editAbout">Zmień informacje o sobie</string>
    <string name="save">ZAPISZ ZMIANY</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>

    <string name="likeThis">Lubię to!</string>
    <string name="shareThis">Udostępnij</string>

    <string name="showPosts">Wróć do przeglądania postów.</string>
    <string name="showTrainings">Wróć do przeglądania treningów.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Wyloguj</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_historiy">HistoriyActivity</string>
    <string name="title_activity_decision">DecisionActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_training2">Training2</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="title_activity_fortest">Fortest</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="edit_photo"><b>EDYTUJ ZDJĘCIE</b></string>
    <string name="title_activity_view_profile">ViewProfile</string>
    <string name="title_activity_view_user_profile">ViewUserProfile</string>
    <string name="title_activity_user_friend_list">UserFriendList</string>
    <string name="title_activity_view_friend_profile">ViewFriendProfileActivity</string>
    <string name="title_activity_message">MessageActivity</string>

    <string name="like"><u>Like</u></string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="post">Post</string>
    <string name="newfeed">New feed</string>
    <string name="name2"><b>First name</b></string>
    <string name="sur_name"><b>Surname</b></string>
    <string name="dialog_text">"What's up?</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_view_friends_trainings">ViewFriendsTrainingsActivity</string>
    <string name="title_activity_tcomment">TCommentActivity</string>
    <string name="title_activity_view_user_objectives">ViewUserObjectives</string>

</resources>
