<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.activity_entry.RegisterActivity">

    <EditText
        android:id="@+id/registerActivity_etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/name"
        android:inputType="textCapWords|textPersonName"
        android:ems="10"/>

    <EditText
        android:id="@+id/registerActivity_etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerActivity_etName"
        android:layout_marginTop="10dp"
        android:hint="@string/surname"
        android:inputType="textCapWords|textPersonName"
        android:ems="10"/>

    <EditText
        android:id="@+id/registerActivity_etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/registerActivity_etSurname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:ems="10"/>

    <Button
        android:id="@+id/registerActivity_bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerActivity_registerInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/register"
        android:onClick="register"/>

    <EditText
        android:id="@+id/registerActivity_etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/registerActivity_etUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:ems="10"/>

    <EditText
        android:id="@+id/registerActivity_etAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerActivity_etEmail"
        android:layout_marginTop="10dp"
        android:hint="@string/age"
        android:inputType="number"
        android:ems="10"/>

    <EditText
        android:id="@+id/registerActivity_etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerActivity_etAge"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:ems="10"/>

    <EditText
        android:id="@+id/registerActivity_etPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerActivity_etPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/passwordConfirm"
        android:inputType="textPassword"
        android:ems="10"/>

    <TextView
        android:id="@+id/registerActivity_registerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/haveAccount"
        android:onClick="openLogin"/>

    <TextView
        android:id="@+id/registerActivity_tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/registerActivity_etPasswordConfirm"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="19sp"
        android:text="@string/chooseGender"/>

    <RadioGroup
        android:id="@+id/registerActivity_rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/registerActivity_tvGender"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/registerActivity_rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.14"
            android:text="@string/male"
            android:onClick="radioButtonClick"/>

        <RadioButton
            android:id="@+id/registerActivity_rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:text="@string/female"
            android:onClick="radioButtonClick"/>
    </RadioGroup>

</RelativeLayout>
