<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.activity_menu.TrainingActivity"
    tools:showIn="@layout/app_bar_training">


    <TextView
        android:id="@+id/trainingActivity_tvTrainingInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/addTraining"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/trainingActivity_tvTrainingCaloriesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_tvTrainingInfo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/trainingActivity_tvGoToEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_tvTrainingCaloriesInfo"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:onClick="showEditProfile"
        android:text="@string/updateWeight"
        android:textColor="@color/colorProff"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/trainingActivity_etDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_tvGoToEditProfile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/ic_timeline"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:hint="@string/estimatedDistance"
        android:inputType="number" />

    <EditText
        android:id="@+id/trainingActivity_etHours"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_etDistance"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/ic_timer_black"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:hint="@string/hours"
        android:inputType="number" />

    <EditText
        android:id="@+id/trainingActivity_etMins"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_etDistance"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="26dp"
        android:layout_toRightOf="@+id/trainingActivity_etHours"
        android:drawableLeft="@drawable/ic_timer_black"
        android:drawablePadding="10dp"
        android:drawableRight="@drawable/ic_edit"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/mins"/>

    <EditText
        android:id="@+id/trainingActivity_etNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_etHours"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/ic_books"
        android:drawableRight="@drawable/ic_edit"
        android:drawablePadding="10dp"
        android:inputType="textCapSentences"
        android:hint="@string/personalNotes"
        android:ems="10"/>

    <TextView
        android:id="@+id/trainingActivity_tvNotesInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trainingActivity_etNotes"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="1dp"
        android:inputType="textCapSentences"
        android:textSize="10sp" />

    <Button
        android:id="@+id/trainingActivity_bAddTraning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/trainingActivity_tvNotesInfo"
        android:layout_alignLeft="@+id/trainingActivity_tvNotesInfo"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/trainingActivity_tvNotesInfo"
        android:layout_alignStart="@+id/trainingActivity_tvNotesInfo"
        android:layout_marginBottom="11dp"
        android:backgroundTint="@color/colorProff"
        android:text="@string/saveTraining"
        android:onClick="addTraining"/>

</RelativeLayout>
